--- a/package/crds/branch.provider-planetscale.crossplane.io_passwords.yaml
+++ b/package/crds/branch.provider-planetscale.crossplane.io_passwords.yaml
@@ -5,18 +5,18 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.11.3
   creationTimestamp: null
-  name: mytypes.sample.template.crossplane.io
+  name: passwords.branch.provider-planetscale.crossplane.io
 spec:
-  group: sample.template.crossplane.io
+  group: branch.provider-planetscale.crossplane.io
   names:
     categories:
     - crossplane
     - managed
-    - template
-    kind: MyType
-    listKind: MyTypeList
-    plural: mytypes
-    singular: mytype
+    - provider-planetscale
+    kind: Password
+    listKind: PasswordList
+    plural: passwords
+    singular: password
   scope: Cluster
   versions:
   - additionalPrinterColumns:
@@ -35,7 +35,7 @@ spec:
     name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: A MyType is an example API type.
+        description: A Password is an example API type.
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -50,7 +50,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: A MyTypeSpec defines the desired state of a MyType.
+            description: A PasswordSpec defines the desired state of a Password.
             properties:
               deletionPolicy:
                 default: Delete
@@ -66,7 +66,7 @@ spec:
                 - Delete
                 type: string
               forProvider:
-                description: MyTypeParameters are the configurable fields of a MyType.
+                description: PasswordParameters are the configurable fields of a Password.
                 properties:
                   configurableField:
                     type: string
@@ -260,17 +260,13 @@ spec:
             - forProvider
             type: object
           status:
-            description: A MyTypeStatus represents the observed state of a MyType.
+            description: A PasswordStatus represents the observed state of a Password.
             properties:
               atProvider:
-                description: MyTypeObservation are the observable fields of a MyType.
+                description: PasswordObservation are the observable fields of a Password.
                 properties:
-                  configurableField:
-                    type: string
                   observableField:
                     type: string
-                required:
-                - configurableField
                 type: object
               conditions:
                 description: Conditions of the resource.
