--- a/package/crds/planetscale.crossplane.io_providerconfigusages.yaml
+++ b/package/crds/planetscale.crossplane.io_providerconfigusages.yaml
@@ -5,14 +5,14 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.11.3
   creationTimestamp: null
-  name: providerconfigusages.template.crossplane.io
+  name: providerconfigusages.planetscale.crossplane.io
 spec:
-  group: template.crossplane.io
+  group: planetscale.crossplane.io
   names:
     categories:
     - crossplane
     - provider
-    - template
+    - planetscale
     kind: ProviderConfigUsage
     listKind: ProviderConfigUsageList
     plural: providerconfigusages
