--- a/package/crds/planetscale.crossplane.io_storeconfigs.yaml
+++ b/package/crds/planetscale.crossplane.io_storeconfigs.yaml
@@ -5,9 +5,9 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.11.3
   creationTimestamp: null
-  name: storeconfigs.template.crossplane.io
+  name: storeconfigs.planetscale.crossplane.io
 spec:
-  group: template.crossplane.io
+  group: planetscale.crossplane.io
   names:
     categories:
     - crossplane
